--- a/package.json
+++ b/package.json
@@ -9,11 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@silvenon/remark-smartypants": "^2.0.0",
+    "esbuild": "^0.15.7",
     "framer-motion": "^6.2.8",
+    "gray-matter": "^4.0.3",
+    "mdx-bundler": "^9.0.1",
     "next": "12.1.0",
+    "next-mdx-remote": "^4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-intersection-observer": "^8.33.1"
+    "react-intersection-observer": "^8.33.1",
+    "rehype-code-titles": "^1.1.0",
+    "rehype-image-placeholder": "^1.0.1",
+    "rehype-prism-plus": "^1.5.0",
+    "remark-autolink-headings": "^7.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-slug": "^7.0.1",
+    "remark-toc": "^8.0.1",
+    "remark-unwrap-images": "^3.0.1",
+    "sharp": "^0.31.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
