--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@silvenon/remark-smartypants": "^2.0.0",
+    "@upstash/redis": "^1.13.1",
     "axios": "^0.27.2",
     "esbuild": "^0.15.7",
     "framer-motion": "^6.2.8",
