--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "remark-slug": "^7.0.1",
     "remark-toc": "^8.0.1",
     "remark-unwrap-images": "^3.0.1",
+    "satori": "^0.0.39",
     "sharp": "^0.31.0"
   },
   "devDependencies": {
