--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@silvenon/remark-smartypants": "^2.0.0",
     "@upstash/redis": "^1.13.1",
+    "@vercel/og": "^0.0.17",
     "axios": "^0.27.2",
     "esbuild": "^0.15.7",
     "framer-motion": "^6.2.8",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.0.1",
-    "next": "12.1.0",
+    "next": "12.3.1",
     "next-mdx-remote": "^4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
