--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "esbuild": "^0.15.7",
     "framer-motion": "^6.2.8",
+    "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.0.1",
     "next": "12.3.1",
