--- a/data/projects.json
+++ b/data/projects.json
@@ -44,7 +44,7 @@
     "links": [
       {
         "title": "Web Page",
-        "link": "https://wayfinder-serverless-satvik-1203.vercel.app/"
+        "link": "https://wayfinder-two-six.vercel.app/"
       }
     ]
   },
